objects/Job_Task_Template_Line__c/Job_Task_Template_Line__c.object-meta.xml
<CustomObject>
    <label>Job Task Template Line</label>
    <nameField>
        <displayFormat>TL-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Task Template Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>