objects/Job_Task_Template_Line__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Materials</fullName>
            </value>
            <value>
                <fullName>Subcontractors</fullName>
                <label>Cost Plus Materials, Equipment and Services</label>
            </value>
            <value>
                <fullName>Waste Disposal</fullName>
            </value>
            <value>
                <fullName>Demurrage</fullName>
                <label>Transportation, Demurrage and Fees</label>
            </value>
            <value>
                <fullName>Lump Sum</fullName>
            </value>
            <value>
                <fullName>Bundled</fullName>
            </value>
            <value>
                <fullName>Misc. Charges And Taxes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>