objects/Job_Task_Template_Line__c/fields/Container_Size__c.field-meta.xml
<CustomField>
    <fullName>Container_Size__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Container Size</label>
    <referenceTo>Unit_of_Measure__c</referenceTo>
    <relationshipLabel>Job Task Template Lines (Container Size)</relationshipLabel>
    <relationshipName>Job_Task_Template_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>