objects/Job_Task_Template_Line__c/fields/Cost_Method__c.field-meta.xml
<CustomField>
    <fullName>Cost_Method__c</fullName>
    <label>Cost Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unit_Weight_Vol</fullName>
                <label>Unit Wt/Vol</label>
            </value>
            <value>
                <fullName>Container</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>