objects/Job_Task_Template_Line__c/fields/Has_Child_Lines__c.field-meta.xml
<CustomField>
    <fullName>Has_Child_Lines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Child Lines</label>
    <type>Checkbox</type>
</CustomField>