objects/Job_Task_Template_Line__c/fields/Is_Child_Resource__c.field-meta.xml
<CustomField>
    <fullName>Is_Child_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Child Resource</label>
    <type>Checkbox</type>
</CustomField>