objects/Job_Task_Template_Line__c/fields/Job_Task_Template__c.field-meta.xml
<CustomField>
    <fullName>Job_Task_Template__c</fullName>
    <label>Job Task Template</label>
    <referenceTo>Job_Task_Template__c</referenceTo>
    <relationshipLabel>Job Task Template Lines</relationshipLabel>
    <relationshipName>Job_Task_Template_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>