objects/Job_Task_Template_Line__c/fields/Line_No__c.field-meta.xml
<CustomField>
    <fullName>Line_No__c</fullName>
    <label>Line No.</label>
    <precision>16</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>