objects/Job_Task_Template_Line__c/fields/Parent_Line__c.field-meta.xml
<CustomField>
    <fullName>Parent_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Line</label>
    <referenceTo>Job_Task_Template_Line__c</referenceTo>
    <relationshipLabel>Job Task Template Lines</relationshipLabel>
    <relationshipName>Job_Task_Template_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>