objects/Job_Task_Template_Line__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <type>TextArea</type>
</CustomField>