objects/Job_Task_Template_Line__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Job Task Template Lines</relationshipLabel>
    <relationshipName>Job_Task_Template_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>