objects/Job_Task_Template_Line__c/fields/UID__c.field-meta.xml
<CustomField>
    <fullName>UID__c</fullName>
    <label>UID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>